# advent-of-code-2021

./: .gitignore  README.md  cabal.project
day01/: cabal.project  day01.cabal  hie.yaml
day01/app/: Main.hs
day01/data/: input.txt
day01/lib/: Day01.hs
day02/: day02.cabal  hie.yaml
day02/app/: Main.hs
day02/lib/: Day02.hs
day03/: day03.cabal  hie.yaml
day03/app/: Main.hs
day03/lib/: Day03.hs
day04/: day04.cabal  hie.yaml
day04/app/: Main.hs
day04/lib/: Day04.hs
day05/: day05.cabal  hie.yaml
day05/app/: Main.hs
day05/lib/: Day05.hs
day06/: day06.cabal  hie.yaml
day06/app/: Main.hs
day06/lib/: Day06.hs
day07/: day07.cabal  hie.yaml
day07/app/: Main.hs
day07/lib/: Day07.hs
day08/: day08.cabal  hie.yaml
day08/app/: Main.hs
day08/lib/: Day08.hs
day09/: day09.cabal  hie.yaml
day09/app/: Main.hs
day09/lib/: Day09.hs
utils/: CHANGELOG.md  aocutils.cabal  hie.yaml
utils/src/: Util.hs
