cabal-version:      3.6
name:               day08
version:            0.1.0.0

author:             Elliot de Vries
maintainer:         elliot.devries@protonmail.com

executable day08
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , aocutils
                    , day08
    hs-source-dirs:   app
    default-language: Haskell2010

library
    build-depends:    base ^>=4.15.0.0
                    , aocutils
                    , split
    default-language: Haskell2010
    exposed-modules:  Day08
    hs-source-dirs:   lib
