cabal-version:      3.6
name:               day09
version:            0.1.0.0

author:             Elliot de Vries
maintainer:         elliot.devries@protonmail.com

executable day09
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
                    , aocutils
                    , day09
    hs-source-dirs:   app
    default-language: Haskell2010

library
    build-depends:    base ^>=4.15.0.0
                    , aocutils
                    , containers
    default-language: Haskell2010
    exposed-modules:  Day09
    hs-source-dirs:   lib
    
